--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "sql_library_manager-v1",
   "version": "1.0.0",
   "description": "An application for my local library to help me manage my collection of books.",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,15 @@
   },
   "homepage": "https://github.com/janxavierv17/sql_library_manager#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
+    "debug": "^4.3.1",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "pug": "^3.0.2",
+    "sequelize": "^6.6.2",
     "sqlite3": "^5.0.2"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.2.0"
   }
 }
