--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.7",
     "pug": "^3.0.2",
     "sequelize": "^6.6.2",
     "sqlite3": "^5.0.2"
